ENABLE_TESTING()

SET(TEST_BINARY_DIR ${PROJECT_BINARY_DIR}/testbin)
SET(EXECUTABLE_OUTPUT_PATH ${TEST_BINARY_DIR})

SET(LOGGER_MODULE_SOURCE_FILES logger.c)
ADD_EXECUTABLE(logger_test.out logger_test.c ${LOGGER_MODULE_SOURCE_FILES})
ADD_TEST(logger_test ${TEST_BINARY_DIR}/logger_test.out)

SET(REPORT_MODULE_SOURCE_FILES report.c ${LOGGER_MODULE_SOURCE_FILES})
ADD_EXECUTABLE(report_test.out report_test.c ${REPORT_MODULE_SOURCE_FILES})
ADD_TEST(report_test ${TEST_BINARY_DIR}/report_test.out)

SET(EXCEPT_MODULE_SOURCE_FILES except.c ${REPORT_MODULE_SOURCE_FILES})
ADD_EXECUTABLE(except_test.out except_test.c ${EXCEPT_MODULE_SOURCE_FILES})
ADD_TEST(except_test ${TEST_BINARY_DIR}/except_test.out)

SET(ASSERT_MODULE_SOURCE_FILES assert.c ${EXCEPT_MODULE_SOURCE_FILES})
ADD_EXECUTABLE(assert_test.out assert_test.c ${ASSERT_MODULE_SOURCE_FILES})
ADD_TEST(assert_test ${TEST_BINARY_DIR}/assert_test.out)

SET(BITVAL_MODULE_SOURCE_FILES bitval.c)
ADD_EXECUTABLE(bitval_test.out bitval_test.c ${BITVAL_MODULE_SOURCE_FILES} ${EXCEPT_MODULE_SOURCE_FILES})
ADD_TEST(bitval_test ${TEST_BINARY_DIR}/bitval_test.out)
SET_TARGET_PROPERTIES(bitval_test.out PROPERTIES COMPILE_FLAGS "-DBITVAL_ERROR_REPORT")
